########################
# Current Developments #
########################

(Work toward next release. Currently under development.)

ADDED:

CHANGED:

DEPRECATED:

REMOVED:

FIXED:

SECURITY:

ACCESSIBILITY:

DOCUMENTATION:

VENDORED SOFTWARE:


##################
# Version 19.0.5 #
##################

ADDED:

* Added the option to specify solutions to "fileupload" questions
  with Markdown code instead of files

FIXED:

* Fixed a crash when a "checkbox"-style multiplechoice question had no True
  answers

* Fixed a UI issue whereby darkmode preferences were inherited when
  impersonating a student

* Replaced code that used the "imp" module, which has been removed from Python
  3.12

* Updated handling of diagrams so that they respect darkmode
  settings

* Fixed a broken implementation of solutions in "fileupload"
  questions

* Fixed a rare crash with asynchronous checkers not always making
  sure the appropriate directories exist before attempting to write
  log files

* Fixed an issue with password-locked pages that prevented them from
  ever being accessed.

VENDORED SOFTWARE:

* A version of cgi.py from the Python standard library is now included in the
  distribution, since that module will be removed from the standard library in
  3.13 and we depend on it for parsing form data.


##################
# Version 19.0.4 #
##################

FIXED:

* Fixed a regression that caused footnotes not to be displayed


##################
# Version 19.0.3 #
##################

FIXED:

* Added a workaround for BeautifulSoup parsing <br/> tags strangely


##################
# Version 19.0.2 #
##################

CHANGED:

* The "fileupload" question type no longer alerts when an empty file is
  specified; instead, the submission is simply treated as empty

FIXED:

* Fixed a bug with questions that are re-rendered after submission

* Fixed issues with handling of questions with csq_indiv=False in the
  submission callback


##################
# Version 19.0.1 #