@@ -8,6 +8,8 @@ ADDED:
 
 CHANGED:
 
+* Updated several question types to bold the word "Solution" in answer displays.
+
 DEPRECATED:
 
 REMOVED:
